Update content on html
Add content about me to index.html.

--- a/index.html
+++ b/index.html
@@ -35,12 +35,17 @@
       <!-- 1/3 column left -->
       <article class="article left-top-article">
         <!-- article in left - top -->
+        <!-- need to change to jump to sections on the page -->
         <a href="http://rheeco.com/"><u>Home</u></a> 
         &emsp;
-        <a href="http://rheeco.com/projects"><u>Projects</u></a>
+        <a href="http://rheeco.com/"><u>Projects</u></a>
         &emsp;
-        <a href="http://rheeco.com/aboutme"><u>About Me</u></a>
-        &emsp;
+        <a href="http://rheeco.com/"><u>About Me</u></a>
+        <br>
+        <p>"The reason we race isn't so much to beat each other,
+           ... but to be with each other."
+           <br> &emsp; - <i>Christopher McDougall</i>
+        </p>
       </article>
       <article class="article left-middle-article">
         <!-- article in left - middle -->
@@ -101,6 +106,21 @@
         <div class="article-body">
           <p class="article-title">
             <!-- content -->
+            I am a General Engineer from Harvey Mudd College (Class of 2013)
+            and I have previously worked in Patent Law as a Patent Engineer
+            before my current position as a Bioinformatics Software Engineer
+            at a genomic startup in Silicon Valley.  My interests include many
+            different fields including image processing, bioengineering, and
+            Patent Law.
+            <br>
+            Outside of work, I have a few activities I enjoy including hiking,
+            swimming, drawing, playing the guitar, driving, reading, catching up
+            with friends, traveling (and taking landscape photographs) and
+            coding up various side projects.
+            <br>
+            I am currently reading The Road to Character by David Brooks and
+            some previous books I would recommend include, at the very least,
+            Born to Run by Christopher McDougall.
           </p>
           <footer class="article-info">
             <!-- information -->
