--- a/junk.html
+++ b/junk.html
@@ -97,23 +97,28 @@
               <img src="./site_files/cr12.jpg" alt="Banff August 2016">
             </figure>
           </article>
-          <article class="article main-nested-third-article">
-            <figure class="article-image-nested">
+        </div>
+        <!-- moving nonnested column down and out -->
+        <div class="column">
+          <article class="article main-nonnested-article">
+            <!-- article in main - nonnested - 1 -->
+            <figure class="article-image-nonnested">
               <img src="./site_files/cr3.jpg" alt="Hooker Valley May 2016">
             </figure>
           </article>
-          <article class="article main-nested-fourth-article">
-            <figure class="article-image-nested">
+          <article class="article main-nonnested-article">
+            <!-- article in main - nonnested - 2 -->
+            <figure class="article-image-nonnested">
               <img src="./site_files/cr5.jpg" alt="Hooker Valley May 2016">
             </figure>
           </article>
-          <article class="article main-nested-fifth-article">
-            <figure class="article-image-nested">
+          <article class="article main-nonnested-article">
+            <!-- article in main - nonnested - 3 -->
+            <figure class="article-image-nonnested">
               <img src="./site_files/cr6.jpg" alt="Milford Sound May 2016">
             </figure>
           </article>
         </div>
-        <!-- moving nonnested column down and out -->
       </div>
 
       <!-- third article in center -->
@@ -222,3 +227,17 @@
   </div>
 </body>
 
+<!--
+    <div class="column right-column">
+      1/3 column right
+      <article class="article right-top">
+        article in right - top
+      </article>
+      <article class="article right-middle">
+        article in right - middle
+      </article>
+      <article class="article right-bottom">
+        article in right - bottom
+      </article>
+    </div>
+//-->
