Commit version with project info
Add project info to index.html

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <article class="article main-fourth-article">
         <!-- article in main - bottom -->
         <div class="article-body">
-          <h3>Professional experience:</h2>
+          <h3>Professional Experience:</h2>
           <!-- content -->
           <ul>
             <h4>Bioinformatics Software Engineer, Centrillion Technologies |
@@ -210,6 +210,84 @@
             </li>
             <li>Assisted in prosecution of 15+ inherited and drafted cases to
                 allowance.
+            </li>
+          </ul>
+          <footer class="article-info">
+            <!-- information -->
+          </footer>
+        </div>
+      </article>
+
+      <!-- fifth article in center -->
+      <article class="article main-fifth-article">
+        <!-- article in main - bottom -->
+        <div class="article-body">
+          <h3>Personal Projects:</h2>
+          <!-- content -->
+          <ul>
+            <h4>rheeco.com | Ongoing</h4>
+            <li>Discussions heavy in scientific technical details benefit from
+                very simple but straightforward data presentation and visuals
+                and so I've always had an interest in developing skills used
+                by Front-End Developers to facilitate those types of
+                discussions.  Working on a personal website has been a fun way
+                to do so!
+            </li>
+            <li>I've been taking online tutorials to teach and to familiarize
+                myself with HTML and CSS and, eventually, will learn more
+                about JavaScript.
+            </li>
+            <li>Most recently, I've been exploring flexbox and experimenting
+                with the layout of the items on my site.  This has all taught
+                me that Front-End Developers must be very patient!
+            </li>
+            <li>I would love feedback if you have any!  I can be reached via
+                LinkedIn, linked in the header.
+            </li>
+            <h4>3D LED Array | May 2013</h4>
+            <li>I took a course called Microprocessor-based Systems in college
+                where I designed, built, and tested a utility board including
+                a Xilinx Spartan 3 FPGA, a PIC microcontroller, configuration
+                PROM, LEDs, switches, and a clock oscillator.  As a final
+                project, my lab partner and I designed, built, and tested a
+                3D LED array in the form of a skyscraper using the FPGA,
+                time-multiplexing, the PIC, the SPI function of the PIC,
+                Bluetooth, and image processing via MATLAB.
+              <figure class="article-image-nested">
+                <img src="./site_files/ledcube.JPG" alt="LED cube">
+              </figure>
+              <figure class="article-video-nested">
+                <video width="auto" height="400" controls>
+                  <source src="./site_files/proofofconcept.mp4"
+                          type="video/mp4">
+                </video>
+              </figure>
+              <figure class="article-video-nested">
+                <video width="auto" height="400" controls>
+                  <source src="./site_files/final.mp4" type="video/mp4">
+                </video>
+              </figure>
+            </li>
+            <h4>Seam Carving | Dec 2011</h4>
+            <li>During college, I discovered that I really enjoyed image
+                processing.  After implementing numerous edge detection
+                techniques, and various transforms for information
+                condensation, manipulation, and analysis in MATLAB (including
+                frequency domain filtering, noise-redction algorithms, and
+                color manipulation to name a few), I developed a program
+                to implement a commercially comparable Seam-carving algorithm
+                in MATLAB.  The overall method of carving or adding seams
+                is described below:
+              <ul>Find the gradient of the image with edge detection (e.g.,
+                  Laplace zero)
+              </ul>
+              <ul>Find potential paths to take in the image (e.g., using the
+                  created gradient)
+              </ul>
+              <ul>Mark the path to add or get rid of
+              </ul>
+              <ul>Cut or add the path
+              </ul>
             </li>
           </ul>
           <footer class="article-info">
